intro-2-ingress/go-samp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-samp
spec:
  type: ClusterIP
  selector:
    app: go-samp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
