intro-2-ingress/go-samp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: go-samp
spec:
  rules:
  - host: go-samp.localhost
    http:
      paths:
      - path: /
        backend:
          service:
            name: go-samp
            port:
              number: 8080
        pathType: Prefix
